--- a/singolo1.html
+++ b/singolo1.html
@@ -2,9 +2,9 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css">
+    
   </head>
   <body>
-    <img href=".assets/singolo1.png">
+    <img id="done-picture" src=".assets/singolo1.png" width="300" height="300">
   </body>
 </html>>
