docs: add style.css

--- a/singolo1.html
+++ b/singolo1.html
@@ -5,6 +5,6 @@
     
   </head>
   <body>
-    <img id="done-picture" src=".assets/singolo1.png" width="300" height="300">
+    <img id="done-picture" src="assets/singolo1.png" "text-align: center">
   </body>
-</html>>
+</html>
