docs: add center image

--- a/singolo1.html
+++ b/singolo1.html
@@ -2,9 +2,11 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <img id="done-picture" src="assets/singolo1.png" "text-align: center">
+    <div id="done-picture">
+      <img src="assets/singolo1.png" class="simple-img">
+    </div>
   </body>
 </html>
