add: change image properties

--- a/singolo1.html
+++ b/singolo1.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css">
+    <link href="style.css">
   </head>
   <body>
-    <div id="done-picture">
-      <img src="assets/singolo1.png" class="simple-img">
+    <div class="image-wrap image-flex">
+      <img src="assets/singolo1.png">
     </div>
   </body>
 </html>
