add: change image properties

--- a/singolo1.html
+++ b/singolo1.html
@@ -3,10 +3,18 @@
   <head>
     <meta charset="utf-8">
     <link href="style.css">
+    <!---<style>
+      .image-flex {
+        text-align: center;
+      }
+    </style>
+    --->
   </head>
   <body>
-    <div class="image-wrap image-flex">
+    <div>
+    <p class="image-flex">
       <img src="assets/singolo1.png">
+    </p>
     </div>
   </body>
 </html>
