docs: add blocks

--- a/singolo1.html
+++ b/singolo1.html
@@ -3,18 +3,34 @@
   <head>
     <meta charset="utf-8">
     <link href="style.css">
-    <!---<style>
-      .image-flex {
-        text-align: center;
+    <style>
+      .first-block {
+        width: 1020px;
+        height: 89px;
+        background-color: #2d303a;
+        color: white;
       }
+      .first-line {
+        width: 1020px;
+        height: 6px;
+        background-color: #2d303a;
+        color: white;
+      }
+        .second-block {
+          width: 1020px;
+          height: 600px;
+          background-color: #f06c64;
+        }
     </style>
-    --->
   </head>
   <body>
-    <div>
-    <p class="image-flex">
-      <img src="assets/singolo1.png">
-    </p>
+    <div class="first-block">
+        SINGOLO
+    </div>
+    <div class="first-line">
+    </div>
+    <div class="second-block">
+        
     </div>
   </body>
 </html>
